traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:6: error: value =< is not a member of Int
    if(lig =< 5){
           ^